--- a/.github/workflows/celebration.yml
+++ b/.github/workflows/celebration.yml
@@ -2,8 +2,8 @@ name: Generate Contribution Celebration
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Runs every 12 hours
-  workflow_dispatch:  # Allows manual triggering
+    - cron: "0 0 * * *"  # Run once daily at midnight
+  workflow_dispatch:      # Manual trigger
   push:
     branches:
       - main
@@ -24,115 +24,112 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          
+      - name: Create package.json
+        run: |
+          echo '{
+            "type": "module",
+            "dependencies": {
+              "d3": "^7.8.5"
+            }
+          }' > package.json
+
+      - name: Install Dependencies
+        run: npm install
 
       - name: Create generate.mjs
         run: |
           cat > generate.mjs << 'EOF'
-          import D3Node from 'd3-node';
+          import * as d3 from 'd3';
           import fs from 'fs';
           
           export async function generateCelebration(github, context) {
-            const d3n = new D3Node();
-            const d3 = d3n.d3;
-            
-            // Fetch contribution data
-            const username = context.repo.owner;
-            const contributionsQuery = `
-              query($username: String!) {
-                user(login: $username) {
-                  contributionsCollection {
-                    contributionCalendar {
+            try {
+              // Fetch contribution data
+              const username = context.repo.owner;
+              console.log('Fetching data for user:', username);
+              
+              const contributionsQuery = `
+                query($username: String!) {
+                  user(login: $username) {
+                    contributionsCollection {
                       totalContributions
                       weeks {
                         contributionDays {
                           contributionCount
                           date
+                          color
                         }
                       }
                     }
                   }
                 }
-              }
-            `;
-            
-            try {
-              console.log('Fetching data for user:', username);
-              const { data } = await github.graphql(contributionsQuery, { username });
-              console.log('Successfully fetched contribution data');
+              `;
               
+              const { data } = await github.graphql(contributionsQuery, { username });
               const contributions = data.user.contributionsCollection.contributionCalendar;
               
-              // Create SVG
-              const svg = d3n.createSVG(1200, 300)
-                .attr('xmlns', 'http://www.w3.org/2000/svg')
-                .style('background', 'transparent');
+              // Create SVG content manually
+              console.log('Creating SVG...');
+              let svgContent = `
+                <svg xmlns="http://www.w3.org/2000/svg" width="800" height="120" viewBox="0 0 800 120">
+                  <style>
+                    @keyframes pulse {
+                      0% { opacity: 0.3; }
+                      50% { opacity: 1; }
+                      100% { opacity: 0.3; }
+                    }
+                    .star { animation: pulse 2s infinite; }
+                    .contribution-text { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; }
+                  </style>
+                  
+                  <defs>
+                    <linearGradient id="contribution-gradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                      <stop offset="0%" style="stop-color:#FF69B4;stop-opacity:1" />
+                      <stop offset="50%" style="stop-color:#4169E1;stop-opacity:1" />
+                      <stop offset="100%" style="stop-color:#32CD32;stop-opacity:1" />
+                    </linearGradient>
+                  </defs>
+                  
+                  <rect width="800" height="120" fill="transparent"/>
+              `;
               
-              // Add gradient definitions
-              const defs = svg.append('defs');
-              const gradient = defs.append('linearGradient')
-                .attr('id', 'contribution-gradient')
-                .attr('x1', '0%')
-                .attr('y1', '0%')
-                .attr('x2', '100%')
-                .attr('y2', '100%');
-                
-              gradient.append('stop')
-                .attr('offset', '0%')
-                .attr('style', 'stop-color:#FF69B4;stop-opacity:1');
-              gradient.append('stop')
-                .attr('offset', '50%')
-                .attr('style', 'stop-color:#4169E1;stop-opacity:1');
-              gradient.append('stop')
-                .attr('offset', '100%')
-                .attr('style', 'stop-color:#32CD32;stop-opacity:1');
+              // Add stars based on total contributions
+              const totalContributions = contributions.totalContributions;
+              const maxStars = 20; // Limit the number of stars for aesthetic purposes
+              const starCount = Math.min(Math.ceil(totalContributions / 50), maxStars);
               
-              // Add celebration elements
-              const container = svg.append('g')
-                .attr('transform', 'translate(50, 50)');
-              
-              // Add animated stars for contributions
-              contributions.weeks.forEach((week, weekIndex) => {
-                week.contributionDays.forEach((day, dayIndex) => {
-                  if (day.contributionCount > 0) {
-                    const x = weekIndex * 16;
-                    const y = dayIndex * 16;
-                    
-                    // Create star shape
-                    container.append('path')
-                      .attr('d', `M ${x},${y} l 5,0 l 2,-5 l 2,5 l 5,0 l -4,3 l 2,5 l -5,-3 l -5,3 l 2,-5 z`)
-                      .style('fill', 'url(#contribution-gradient)')
-                      .append('animate')
-                      .attr('attributeName', 'opacity')
-                      .attr('values', '0;1;0')
-                      .attr('dur', '2s')
-                      .attr('repeatCount', 'indefinite');
-                  }
-                });
-              });
+              for (let i = 0; i < starCount; i++) {
+                const x = 40 + (i * 40);
+                const y = 30;
+                const starPath = `
+                  <path class="star" transform="translate(${x}, ${y})" 
+                        d="M 0,-10 L 2,-3 L 9,-3 L 4,1 L 6,8 L 0,4 L -6,8 L -4,1 L -9,-3 L -2,-3 Z"
+                        fill="url(#contribution-gradient)" />
+                `;
+                svgContent += starPath;
+              }
               
               // Add celebration text
-              const text = container.append('text')
-                .attr('x', 500)
-                .attr('y', 130)
-                .attr('text-anchor', 'middle')
-                .style('font-family', 'Arial')
-                .style('font-size', '24px')
-                .style('font-weight', 'bold')
-                .style('fill', '#0366d6')
-                .text(`🎉 ${contributions.totalContributions} Contributions! 🎉`);
+              svgContent += `
+                <text x="400" y="80" 
+                      class="contribution-text"
+                      text-anchor="middle" 
+                      fill="#0366d6" 
+                      font-size="24" 
+                      font-weight="bold">
+                  🎉 ${totalContributions.toLocaleString()} Contributions! 🎉
+                </text>
+              </svg>`;
               
-              text.append('animate')
-                .attr('attributeName', 'font-size')
-                .attr('values', '24;28;24')
-                .attr('dur', '2s')
-                .attr('repeatCount', 'indefinite');
-              
-              console.log('Creating dist directory');
+              // Ensure dist directory exists
+              console.log('Creating dist directory...');
               fs.mkdirSync('dist', { recursive: true });
               
-              console.log('Writing SVG file');
-              fs.writeFileSync('dist/celebration.svg', d3n.svgString());
-              console.log('Successfully generated celebration SVG');
+              // Save the SVG
+              console.log('Writing SVG file...');
+              fs.writeFileSync('dist/celebration.svg', svgContent);
+              console.log('Successfully generated celebration SVG!');
               
             } catch (error) {
               console.error('Error in generateCelebration:', error);
@@ -141,17 +138,29 @@ jobs:
           }
           EOF
 
-      - name: Install Dependencies
-        run: npm install d3-node axios
-
       - name: Generate Celebration
         uses: actions/github-script@v7
         with:
           script: |
-            console.log('Current working directory:', process.cwd());
-            console.log('Checking if generate.mjs exists:', require('fs').existsSync('generate.mjs'));
-            const { generateCelebration } = await import(`${process.cwd()}/generate.mjs`);
-            await generateCelebration(github, context);
+            try {
+              console.log('Current working directory:', process.cwd());
+              const fileExists = require('fs').existsSync('generate.mjs');
+              console.log('Checking if generate.mjs exists:', fileExists);
+              
+              if (!fileExists) {
+                throw new Error('generate.mjs file not found!');
+              }
+              
+              console.log('Importing generateCelebration function...');
+              const { generateCelebration } = await import(`${process.cwd()}/generate.mjs`);
+              
+              console.log('Starting celebration generation...');
+              await generateCelebration(github, context);
+              console.log('Celebration generation completed successfully!');
+            } catch (error) {
+              console.error('Error in workflow execution:', error);
+              throw error;
+            }
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
